# sotsuken

./: .gitignore  Dockerfile  README.md  fft.py  fft_test.py  ofdm.py  pyproject.toml  readme.md  requirements.txt  test.py  xcorr.py
.github/workflows/: python.yml  test.yml
data/: serial_data_line7=-15,master=0,master-out=10  serial_data_line7=-9.5,master=0,master_out=10  serial_result
docs/: adc.txt  fpga.md  marp.md  paper.txt
docs/final-slide/: 20250304山口雄大発表_本番用.pptx
docs/final-slide/assets/: OFDM送受信機の構成.drawio  fdm-ofdm 卒論用.drawio  fft-divide.drawio  サブキャリア数が8のときのサブキャリアとOFDMの波形.drawio  一次変調にAMを用いたときのFDMのブロック図.drawio  流星バースト通信.drawio
docs/final-slide/script/: bpsk.py  (+1 more)
docs/midterm/: slide.md
docs/prepaper/: prepaper.docx
experiment/: serial_test.py
ofdm-fpga/: .gitignore  ofdm-fpga.gprj
ofdm-fpga/impl/: ofdm-fpga_process_config.json
ofdm-fpga/src/: butterfly.v  demodulation.v  fft1024.v  fft1024.v.timing  fft_twindle_factor_index.v  led.v  mcp3002.v  ofdm-fpga.cst  ofdm-fpga.sdc  ofdm.v  top.v  top.v.fft1024_ok  top.v.mux-ofdm  top.v.pll_fft1024_ok  uart_rx.v  uart_tx.v
ofdm-fpga/tb/: tb_fft1024.v  tb_gowin_prom_w.v  tb_mcp3002.v  tb_ofdm.v  tb_top.v  tb_uart_rx.v  tb_uart_tx.v
ofdm-simulation/: Dockerfile  correlate.py  fft.py  fpga.py  lpf_test.py  main.py  multi_process.py  ofdm.py  requirements.txt  run.py  util_binary.py
ofdm-simulation/tests/: conftest.py  test_correlate.py  test_fft.py  test_fpga.py  test_ofdm.py  test_run.py  test_util_binary.py
scripts/: ci.sh
tools/: create_twiddle_factor.py  lpf_test.py  test_fpga_fft.py
(+33 files in other folders)
